@@ -16,7 +16,7 @@ INC_DIR = .
 
 # Required extras
 EXTRAS = $(PORT_CASES_DIR)/testfwk$(OBJEXT) $(PORT_CASES_DIR)/support$(OBJEXT)
-include fwk/lib/spec.mk
+include $(srcdir)/fwk/lib/spec.mk
 
 %.out: %$(BINEXT)
 	mkdir -p $(dir $@)
